applications/notylus.com/web/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notylus-com
  name: notylus-com
  namespace: notylus-com
spec:
  selector:
    matchLabels:
      app: notylus-com
  strategy: {}
  template:
    metadata:
      labels:
        app: notylus-com
    spec:
      containers:
      - image: erickmpene/n8n:v1
        name: notylus-com
        ports:
        - containerPort: 5678
        resources: {}
status: {}
