applications/notylus.com/web/overlays/dev/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notylus-com
  namespace: notylus-com
  labels:
    app: notylus-com
spec:
  selector:
    app: notylus-com
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
