applications/notylus.com/web/overlays/dev/patch-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway-notylus-com
  namespace: istio-system
spec:
  selector:
    istio: dev
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - dev.notylus.com
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - dev.notylus.com
    tls:
      mode: SIMPLE
      credentialName: notylus-com-dev-tls-secret
